Added a grunt configuration to create a visual-editor distribution.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "jquery": "^1.11.1"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-uglify": "^0.7.0",
+    "grunt-subgrunt": "^0.4.3",
     "visualeditor": "wikimedia/VisualEditor.git#c7395335d2b94a298ce85fa064fb6f0cd712ed3e"
   },
   "description": "Ember addon that provides VisualEditor.",
