--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-subgrunt": "^0.4.3",
-    "visualeditor": "wikimedia/VisualEditor.git#c7395335d2b94a298ce85fa064fb6f0cd712ed3e"
+    "visualeditor": "oliver----/VisualEditor.git#tahi"
   },
   "description": "Ember addon that provides VisualEditor.",
   "keywords": [
