Updated location of visualeditor repo.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-subgrunt": "^0.4.3",
-    "visualeditor": "oliver----/VisualEditor.git#tahi"
+    "visualeditor": "substance/VisualEditor.git#tahi"
   },
   "description": "Ember addon that provides VisualEditor.",
   "keywords": [
