--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-subgrunt": "^0.4.3",
+    "lodash-node": "*",
     "visualeditor": "substance/VisualEditor.git#tahi"
   },
   "description": "Ember addon that provides VisualEditor.",
