--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "jquery": "^1.11.1"
+    "jquery": "^2.1.3",
+    "merge": "^1.2.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -17,7 +18,6 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-subgrunt": "^0.4.3",
-    "lodash-node": "*",
     "visualeditor": "substance/VisualEditor.git#tahi"
   },
   "description": "Ember addon that provides VisualEditor.",
